<resources>
    <string name="app_name">Composition</string>
    <string name="game_rules">Игра предназначена для детей от 3 лет. Для начала расскажите ребёнку, что каждое число можно разложить на несколько других чисел. Чтобы заниматься было легче, можно сначала использовать карточки с треугольниками, а только потом переходить к цифрам.</string>
    <string name="welcome_logo">welcome logo</string>
    <string name="understand">Понятно</string>
    <string name="string_question_mark">\?</string>
    <string name="progress_answers">Правильных ответов: %s (минимум %s )</string>
    <string name="timer">00 : 00</string>
    <string name="game_over">game over</string>
    <string name="required_answers">Необходимое количество правильных ответов: %s</string>
    <string name="scores_answers">Ваш ответ: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="scores_percentage">Процент правильных ответов: %s</string>
    <string name="title">Состав числа</string>
</resources>