<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/timer"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sum"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@drawable/circle_background"
        android:text="99"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_timer" />

    <TextView
        android:id="@+id/tv_left_number"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:background="@color/teal_200"
        android:text="1"
        android:textColor="#546E7A"
        app:layout_constraintBottom_toBottomOf="@+id/tv_right_number"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/tv_right_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_right_number" />

    <TextView
        android:id="@+id/tv_right_number"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:background="@color/teal_700"
        android:text="@string/string_question_mark"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_left_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_sum"
        app:layout_optimizationLevel="chains" />

    <TextView
        android:id="@+id/tv_answer_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/progress_answers"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintTop_toBottomOf="@+id/tv_left_number" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer_progress" />

    <TextView
        android:id="@+id/tv_option_1"
        style="@style/QuestionStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/color_answer_1"
        android:text="1"
        android:textColor="#795548"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_option_2"
        style="@style/QuestionStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/color_answer_2"
        android:text="2"
        android:textColor="#5E35B1"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_5"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_1" />

    <TextView
        android:id="@+id/tv_option_3"
        style="@style/QuestionStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/color_answer_3"
        android:text="3"
        android:textColor="#009688"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_2" />

    <TextView
        android:id="@+id/tv_option_4"
        style="@style/QuestionStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/color_answer_4"
        android:text="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_option_5"
        style="@style/QuestionStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/color_answer_5"
        android:text="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_option_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_4" />

    <TextView
        android:id="@+id/tv_option_6"
        style="@style/QuestionStyle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/color_answer_6"
        android:text="6"
        android:textColor="#26C6DA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_option_5" />

</androidx.constraintlayout.widget.ConstraintLayout>